# metric_evaluator

./: .gitignore  README.md  example.py  example2.py  pyproject.toml
data/: snils_MODELFRAMEWORK_Qwen2-VL-2B-Instruct_VQA_answers_20250124_125639.csv  snils_dataset_annotations.csv
docker/: Dockerfile
metric_evaluator/: metric_evaluator.py
