[tool.poetry]
name = "metric-evaluator"
version = "0.1.0"
description = ""
authors = ["Eugene <eugene-kk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
jiwer = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
